--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,9 @@
 dependencies {
-    compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
-    compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
-    compileOnly 'com.liferay:com.liferay.frontend.taglib'
+    compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 
-    compileOnly group: "javax.portlet", name: "portlet-api"
-    compileOnly group: "javax.servlet", name: "javax.servlet-api"
-    compileOnly group: "jstl", name: "jstl"
-    compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+    cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
 
+    compileOnly project(":modules:product-specification-template:product-specification-template-api")
+    compileOnly project(":modules:product-specification-template:product-specification-template-service")
 
-    compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.product.api", version: "23.4.0"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.product.content.api", version: "3.0.3"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.product.type.simple", version: "1.0.0"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.frontend.taglib", version: "7.2.1"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.api", version: "19.5.1"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.currency.api", version: "3.2.1"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.taglib", version: "2.2.2"
-    compileOnly group: "com.liferay.commerce", name: "com.liferay.commerce.product.taglib", version: "1.1.2"
-
-
-    compile group: 'com.liferay.portal', name: 'release.portal.api', version: '7.2.0'
 }
